--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Juan Cruz Moran",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "nodemon": "^2.0.16"
   }
 }
